kube/lifescope-api-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifescope
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifescope-api
  namespace: lifescope
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lifescope-api
  template:
    metadata:
      labels:
        app: lifescope-api
    spec:
      serviceAccountName: lifescope
      containers:
        - name: lifescope-api
          image: barankyle/lifescope-api:v4.0.0
          ports:
            - containerPort: 3000
            - containerPort: 3001
          imagePullPolicy: IfNotPresent
      dnsPolicy: Default
---
apiVersion: v1
kind: Service
metadata:
  name: lifescope-api
  namespace: lifescope
spec:
  selector:
    app: lifescope-api
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: subscriptions
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-api-ingress-master
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - api.lifescope.io
      secretName: lifescope-secret
  rules:
    - host: api.lifescope.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-api-ingress-location-upload-minion
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/client-max-body-size: "2000m"
spec:
  rules:
    - host: api.lifescope.io
      http:
        paths:
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /locations/upload_file
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-api-ingress-main-minion
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: api.lifescope.io
      http:
        paths:
          - backend:
              serviceName: lifescope-api
              servicePort: 3001
            path: /subscriptions
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /
