kube/lifescope-app-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifescope
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifescope-app
  namespace: lifescope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lifescope-app
  template:
    metadata:
      labels:
        app: lifescope-app
    spec:
      serviceAccountName: lifescope
      containers:
        - name: lifescope-app
          image: barankyle/lifescope-app:v4.0.0
          ports:
            - containerPort: 3002
          imagePullPolicy: IfNotPresent
      dnsPolicy: Default
---
apiVersion: v1
kind: Service
metadata:
  name: lifescope-app
  namespace: lifescope
spec:
  selector:
    app: lifescope-app
  ports:
    - name: api
      protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-app-ingress-master
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - app.lifescope.io
      secretName: lifescope-secret
  rules:
    - host: app.lifescope.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-app-ingress-location-minion
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/client-max-body-size: "2000m"
spec:
  rules:
    - host: app.lifescope.io
      http:
        paths:
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /locations
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-app-ingress-main-minion
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: app.lifescope.io
      http:
        paths:
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /connections
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /email/confirm
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /financials
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /login/exchange-code
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /logout
          - backend:
              serviceName: lifescope-api
              servicePort: 3000
            path: /signup/exchange-code
          - backend:
              serviceName: lifescope-app
              servicePort: 3002
            path: /
